# WinDesktopHooks

./: .gitignore  hklaunch.cc  hklaunch.h  hkpayload.cc
Dummy/: dummy.cc
Injectable/: CMakeLists.txt  injectable.cc  injectable.h
Launcher/: CMakeLists.txt  launcher.cc  launcher.h  service.proto
Recorder/: CMakeLists.txt  recorder.cc  recorder.h
